--- a/packages/frontend/src/app/pages/info-components/contribute-cancel/contribute-cancel.page.html
+++ b/packages/frontend/src/app/pages/info-components/contribute-cancel/contribute-cancel.page.html
@@ -4,28 +4,28 @@
       <ion-back-button [defaultHref]="defaultBackHref"></ion-back-button>
     </ion-buttons>
 
-    <ion-title>{{ 'pages.contributeCancel.title' | translate }}</ion-title>
+    <ion-title>{{ "pages.contributeCancel.title" | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding ion-text-center">
-  <p class="headline">{{ 'pages.contributeCancel.title' | translate }}</p>
+  <p class="headline">{{ "pages.contributeCancel.title" | translate }}</p>
 
   <div class="card">
     <logo-icon href="/#/about"></logo-icon>
 
-    <p>{{ 'pages.contributeCancel.cta.1' | translate }}</p>
+    <p>{{ "pages.contributeCancel.cta.1" | translate }}</p>
 
     <br />
 
-    <p>{{ 'pages.contributeCancel.cta.2' | translate }}</p>
+    <p>{{ "pages.contributeCancel.cta.2" | translate }}</p>
 
-    <p>{{ 'pages.contributeCancel.cta.3' | translate }}</p>
+    <p>{{ "pages.contributeCancel.cta.3" | translate }}</p>
 
-    <p>{{ 'pages.contributeCancel.cta.4' | translate }}</p>
+    <p>{{ "pages.contributeCancel.cta.4" | translate }}</p>
 
     <a class="donate monthly-paypal" [routerLink]="contributePath">
-      {{ 'pages.contributeCancel.contribute' | translate }}
+      {{ "pages.contributeCancel.contribute" | translate }}
     </a>
     <br />
   </div>
