--- a/packages/frontend/src/app/pages/recipe-components/edit-recipe-popover/edit-recipe-popover.page.html
+++ b/packages/frontend/src/app/pages/recipe-components/edit-recipe-popover/edit-recipe-popover.page.html
@@ -1,6 +1,6 @@
 <ion-list no-border>
   <ion-list-header>
-    {{ 'pages.editRecipePopover.actions' | translate }}
+    {{ "pages.editRecipePopover.actions" | translate }}
   </ion-list-header>
 
   <ion-button
@@ -11,6 +11,6 @@
     class="ion-margin"
   >
     <ion-icon name="image" slot="start"></ion-icon>
-    {{ 'pages.editRecipePopover.addImage' | translate }}
+    {{ "pages.editRecipePopover.addImage" | translate }}
   </ion-button>
 </ion-list>
