--- a/packages/frontend/src/app/pages/recipe-components/recipe-details-popover/recipe-details-popover.page.html
+++ b/packages/frontend/src/app/pages/recipe-components/recipe-details-popover/recipe-details-popover.page.html
@@ -1,182 +1,190 @@
 <ion-list no-border>
   @if (wakeLockCapable) {
-  <div>
-    @if (wakeLockCapable) {
-    <ion-list-header>
-      {{ 'pages.recipeDetailsPopover.options' | translate }}
-    </ion-list-header>
-    }
-    <ion-item lines="full">
-      <ion-icon name="eye" slot="start"></ion-icon>
-      <ion-toggle
-        [(ngModel)]="preferences[preferenceKeys.EnableWakeLock]"
-        (ngModelChange)="savePreferences(); closeWithAction('updateWakeLock')"
-      >
-        <div class="ion-text-wrap">
-          {{ 'pages.recipeDetailsPopover.keepScreenOn' | translate }}
-        </div>
-      </ion-toggle>
-    </ion-item>
-  </div>
+    <div>
+      @if (wakeLockCapable) {
+        <ion-list-header>
+          {{ "pages.recipeDetailsPopover.options" | translate }}
+        </ion-list-header>
+      }
+      <ion-item lines="full">
+        <ion-icon name="eye" slot="start"></ion-icon>
+        <ion-toggle
+          [(ngModel)]="preferences[preferenceKeys.EnableWakeLock]"
+          (ngModelChange)="savePreferences(); closeWithAction('updateWakeLock')"
+        >
+          <div class="ion-text-wrap">
+            {{ "pages.recipeDetailsPopover.keepScreenOn" | translate }}
+          </div>
+        </ion-toggle>
+      </ion-item>
+    </div>
   }
 
   <ion-list-header>
-    {{ 'pages.recipeDetailsPopover.actions' | translate }}
+    {{ "pages.recipeDetailsPopover.actions" | translate }}
   </ion-list-header>
 
   <ion-button
-    (click)="cookingToolbarService.isPinned(recipe.id) ? closeWithAction('unpin') : closeWithAction('pin')"
+    (click)="
+      cookingToolbarService.isPinned(recipe.id)
+        ? closeWithAction('unpin')
+        : closeWithAction('pin')
+    "
     expand="block"
     size="small"
     class="ion-margin"
   >
     <ion-icon name="pin" slot="start"></ion-icon>
     @if (cookingToolbarService.isPinned(recipe.id)) {
-    <span> {{ 'pages.recipeDetailsPopover.unPinRecipe' | translate }} </span>
-    } @if (!cookingToolbarService.isPinned(recipe.id)) {
-    <span> {{ 'pages.recipeDetailsPopover.pinRecipe' | translate }} </span>
+      <span> {{ "pages.recipeDetailsPopover.unPinRecipe" | translate }} </span>
+    }
+    @if (!cookingToolbarService.isPinned(recipe.id)) {
+      <span> {{ "pages.recipeDetailsPopover.pinRecipe" | translate }} </span>
     }
   </ion-button>
 
-  @if (recipe.userId === me?.id && recipe.folder === 'inbox') {
-  <div>
-    <ion-item lines="none">
-      <ion-label>
-        <p class="ion-text-wrap">
-          {{ 'pages.recipeDetails.inInbox' | translate }}
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-button
-      (click)="closeWithAction('moveToMain')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-    >
-      <ion-icon name="cloud-download" slot="start"></ion-icon>
-      {{ 'pages.recipeDetails.saveToMyRecipes' | translate }}
-    </ion-button>
-    <ion-list-header>
-      {{ 'pages.recipeDetailsPopover.dangerZone' | translate }}
-    </ion-list-header>
-    <ion-button
-      (click)="closeWithAction('delete')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-      color="danger"
-    >
-      <ion-icon name="trash" slot="start"></ion-icon>
-      {{ 'pages.recipeDetailsPopover.delete' | translate }}
-    </ion-button>
-  </div>
-  } @if (recipe.userId !== me?.id && isLoggedIn) {
-  <div>
-    <ion-item lines="none">
-      <ion-label>
-        <p class="ion-text-wrap">
-          {{ 'pages.recipeDetails.doesNotBelongToYou' | translate }}
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-button
-      (click)="closeWithAction('clone')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-    >
-      <ion-icon name="cloud-download" slot="start"></ion-icon>
-      {{ 'pages.recipeDetails.saveToMyRecipes' | translate }}
-    </ion-button>
-  </div>
-  } @if (recipe.userId !== me?.id && !isLoggedIn) {
-  <div>
-    <ion-item lines="none">
-      <ion-label>
-        <p class="ion-text-wrap">
-          {{ 'pages.recipeDetails.requiresAccountToSave' | translate }}
-        </p>
-      </ion-label>
-    </ion-item>
-    <ion-button
-      (click)="closeWithAction('authAndClone')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-    >
-      <ion-icon name="cloud-download" slot="start"></ion-icon>
-      {{ 'pages.recipeDetails.registerOrLoginToSave' | translate }}
-    </ion-button>
-  </div>
-  } @if (recipe.userId === me?.id && recipe.folder === 'main') {
-  <div>
-    <ion-button
-      (click)="closeWithAction('addToShoppingList')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-    >
-      <ion-icon name="list" slot="start"></ion-icon>
-      {{ 'pages.recipeDetailsPopover.addToShoppingList' | translate }}
-    </ion-button>
-    <ion-button
-      (click)="closeWithAction('addToMealPlan')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-    >
-      <ion-icon name="calendar" slot="start"></ion-icon>
-      {{ 'pages.recipeDetailsPopover.addToMealPlan' | translate }}
-    </ion-button>
-    <ion-button
-      (click)="closeWithAction('share')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-    >
-      <ion-icon name="share" slot="start"></ion-icon>
-      {{ 'pages.recipeDetailsPopover.share' | translate }}
-    </ion-button>
-    <ion-button
-      (click)="closeWithAction('print')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-    >
-      <ion-icon name="print" slot="start"></ion-icon>
-      {{ 'pages.recipeDetailsPopover.print' | translate }}
-    </ion-button>
-    <ion-button
-      (click)="closeWithAction('edit')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-    >
-      <ion-icon name="create" slot="start"></ion-icon>
-      {{ 'pages.recipeDetailsPopover.edit' | translate }}
-    </ion-button>
-    <ion-button
-      (click)="closeWithAction('clone')"
-      expand="block"
-      size="small"
-      class="ion-margin"
-    >
-      <ion-icon name="copy" slot="start"></ion-icon>
-      {{ 'pages.recipeDetailsPopover.makeACopy' | translate }}
-    </ion-button>
-    <ion-list-header>
-      {{ 'pages.recipeDetailsPopover.dangerZone' | translate }}
-    </ion-list-header>
-    <ion-button
-      (click)="closeWithAction('delete')"
-      expand="block"
-      size="small"
-      color="danger"
-      class="ion-margin"
-    >
-      <ion-icon name="trash" slot="start"></ion-icon>
-      {{ 'pages.recipeDetailsPopover.delete' | translate }}
-    </ion-button>
-  </div>
+  @if (recipe.userId === me?.id && recipe.folder === "inbox") {
+    <div>
+      <ion-item lines="none">
+        <ion-label>
+          <p class="ion-text-wrap">
+            {{ "pages.recipeDetails.inInbox" | translate }}
+          </p>
+        </ion-label>
+      </ion-item>
+      <ion-button
+        (click)="closeWithAction('moveToMain')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+      >
+        <ion-icon name="cloud-download" slot="start"></ion-icon>
+        {{ "pages.recipeDetails.saveToMyRecipes" | translate }}
+      </ion-button>
+      <ion-list-header>
+        {{ "pages.recipeDetailsPopover.dangerZone" | translate }}
+      </ion-list-header>
+      <ion-button
+        (click)="closeWithAction('delete')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+        color="danger"
+      >
+        <ion-icon name="trash" slot="start"></ion-icon>
+        {{ "pages.recipeDetailsPopover.delete" | translate }}
+      </ion-button>
+    </div>
+  }
+  @if (recipe.userId !== me?.id && isLoggedIn) {
+    <div>
+      <ion-item lines="none">
+        <ion-label>
+          <p class="ion-text-wrap">
+            {{ "pages.recipeDetails.doesNotBelongToYou" | translate }}
+          </p>
+        </ion-label>
+      </ion-item>
+      <ion-button
+        (click)="closeWithAction('clone')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+      >
+        <ion-icon name="cloud-download" slot="start"></ion-icon>
+        {{ "pages.recipeDetails.saveToMyRecipes" | translate }}
+      </ion-button>
+    </div>
+  }
+  @if (recipe.userId !== me?.id && !isLoggedIn) {
+    <div>
+      <ion-item lines="none">
+        <ion-label>
+          <p class="ion-text-wrap">
+            {{ "pages.recipeDetails.requiresAccountToSave" | translate }}
+          </p>
+        </ion-label>
+      </ion-item>
+      <ion-button
+        (click)="closeWithAction('authAndClone')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+      >
+        <ion-icon name="cloud-download" slot="start"></ion-icon>
+        {{ "pages.recipeDetails.registerOrLoginToSave" | translate }}
+      </ion-button>
+    </div>
+  }
+  @if (recipe.userId === me?.id && recipe.folder === "main") {
+    <div>
+      <ion-button
+        (click)="closeWithAction('addToShoppingList')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+      >
+        <ion-icon name="list" slot="start"></ion-icon>
+        {{ "pages.recipeDetailsPopover.addToShoppingList" | translate }}
+      </ion-button>
+      <ion-button
+        (click)="closeWithAction('addToMealPlan')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+      >
+        <ion-icon name="calendar" slot="start"></ion-icon>
+        {{ "pages.recipeDetailsPopover.addToMealPlan" | translate }}
+      </ion-button>
+      <ion-button
+        (click)="closeWithAction('share')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+      >
+        <ion-icon name="share" slot="start"></ion-icon>
+        {{ "pages.recipeDetailsPopover.share" | translate }}
+      </ion-button>
+      <ion-button
+        (click)="closeWithAction('print')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+      >
+        <ion-icon name="print" slot="start"></ion-icon>
+        {{ "pages.recipeDetailsPopover.print" | translate }}
+      </ion-button>
+      <ion-button
+        (click)="closeWithAction('edit')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+      >
+        <ion-icon name="create" slot="start"></ion-icon>
+        {{ "pages.recipeDetailsPopover.edit" | translate }}
+      </ion-button>
+      <ion-button
+        (click)="closeWithAction('clone')"
+        expand="block"
+        size="small"
+        class="ion-margin"
+      >
+        <ion-icon name="copy" slot="start"></ion-icon>
+        {{ "pages.recipeDetailsPopover.makeACopy" | translate }}
+      </ion-button>
+      <ion-list-header>
+        {{ "pages.recipeDetailsPopover.dangerZone" | translate }}
+      </ion-list-header>
+      <ion-button
+        (click)="closeWithAction('delete')"
+        expand="block"
+        size="small"
+        color="danger"
+        class="ion-margin"
+      >
+        <ion-icon name="trash" slot="start"></ion-icon>
+        {{ "pages.recipeDetailsPopover.delete" | translate }}
+      </ion-button>
+    </div>
   }
 </ion-list>
