--- a/packages/frontend/src/app/pages/settings-components/import-livingcookbook/import-livingcookbook.page.html
+++ b/packages/frontend/src/app/pages/settings-components/import-livingcookbook/import-livingcookbook.page.html
@@ -4,14 +4,14 @@
       <ion-back-button [defaultHref]="defaultBackHref"></ion-back-button>
     </ion-buttons>
 
-    <ion-title>{{ 'pages.importLivingCookbook.title' | translate }}</ion-title>
+    <ion-title>{{ "pages.importLivingCookbook.title" | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <ion-item lines="none">
     <ion-label class="ion-text-wrap">
-      {{ 'pages.importLivingCookbook.description' | translate }}
+      {{ "pages.importLivingCookbook.description" | translate }}
     </ion-label>
   </ion-item>
 
@@ -28,39 +28,50 @@
 
     <ion-item lines="none" [disabled]="progress !== undefined">
       <ion-label>
-        {{ 'pages.import.step' | translate:{ number: 1 } }}
+        {{ "pages.import.step" | translate: { number: 1 } }}
 
         <div class="ion-padding">
           <ion-button fill="outline" (click)="filePicker()">
             @if (file) {
-            <span>
-              {{ 'pages.import.filePicker.file' | translate:{fileName:file.name}
-              }}
-            </span>
-            } @if (!file) {
-            <span>
-              {{ 'pages.import.filePicker.noFile' |
-              translate:{acceptableFiletypes:'.lcb, .fdx, .fdxz'} }}
-            </span>
+              <span>
+                {{
+                  "pages.import.filePicker.file"
+                    | translate: { fileName: file.name }
+                }}
+              </span>
+            }
+            @if (!file) {
+              <span>
+                {{
+                  "pages.import.filePicker.noFile"
+                    | translate: { acceptableFiletypes: ".lcb, .fdx, .fdxz" }
+                }}
+              </span>
             }
           </ion-button>
 
           @if (showFileTypeWarning()) {
-          <div>
-            <p>
-              {{ 'pages.import.fileTypeWarning' |
-              translate:{acceptableFiletypes:'.lcb, .fdx, .fdxz'} }}
-            </p>
-          </div>
-          } @if (isFileTooLarge()) {
-          <div>
-            <p>
-              <b>{{ 'pages.import.fileTooLarge' | translate }}</b><br />
-              <a href="mailto:julian@recipesage.com?subject=RecipeSage Support">
-                {{ 'pages.import.fileTooLarge.contact' | translate }}
-              </a>
-            </p>
-          </div>
+            <div>
+              <p>
+                {{
+                  "pages.import.fileTypeWarning"
+                    | translate: { acceptableFiletypes: ".lcb, .fdx, .fdxz" }
+                }}
+              </p>
+            </div>
+          }
+          @if (isFileTooLarge()) {
+            <div>
+              <p>
+                <b>{{ "pages.import.fileTooLarge" | translate }}</b
+                ><br />
+                <a
+                  href="mailto:julian@recipesage.com?subject=RecipeSage Support"
+                >
+                  {{ "pages.import.fileTooLarge.contact" | translate }}
+                </a>
+              </p>
+            </div>
           }
         </div>
       </ion-label>
@@ -71,7 +82,7 @@
       [disabled]="!file || progress !== undefined || isFileTooLarge()"
     >
       <ion-label>
-        {{ 'pages.import.step' | translate:{ number: 2 } }}
+        {{ "pages.import.step" | translate: { number: 2 } }}
 
         <div class="ion-padding">
           <ion-checkbox
@@ -80,34 +91,37 @@
             [checked]="options.excludeImages"
             (ionChange)="options.excludeImages = $event.detail.checked"
           >
-            {{ 'pages.importLivingCookbook.excludeImages' | translate }}
+            {{ "pages.importLivingCookbook.excludeImages" | translate }}
           </ion-checkbox>
           @if (isLCB()) {
-          <ion-checkbox
-            labelPlacement="end"
-            justify="start"
-            [checked]="options.includeStockRecipes"
-            (ionChange)="options.includeStockRecipes = $event.detail.checked"
-          >
-            {{ 'pages.importLivingCookbook.includeStock' | translate }}
-          </ion-checkbox>
-          } @if (isLCB()) {
-          <ion-checkbox
-            labelPlacement="end"
-            justify="start"
-            [checked]="options.includeTechniques"
-            (ionChange)="options.includeTechniques = $event.detail.checked"
-          >
-            {{ 'pages.importLivingCookbook.includeTechniques' | translate }}
-          </ion-checkbox>
-          } @if (!showFileTypeWarning()) {
-          <ion-button slot="start" (click)="submit()">
-            {{ 'pages.import.upload' | translate }}
-          </ion-button>
-          } @if (showFileTypeWarning()) {
-          <ion-button slot="start" (click)="submit()">
-            {{ 'pages.import.upload.ignoreWarning' | translate }}
-          </ion-button>
+            <ion-checkbox
+              labelPlacement="end"
+              justify="start"
+              [checked]="options.includeStockRecipes"
+              (ionChange)="options.includeStockRecipes = $event.detail.checked"
+            >
+              {{ "pages.importLivingCookbook.includeStock" | translate }}
+            </ion-checkbox>
+          }
+          @if (isLCB()) {
+            <ion-checkbox
+              labelPlacement="end"
+              justify="start"
+              [checked]="options.includeTechniques"
+              (ionChange)="options.includeTechniques = $event.detail.checked"
+            >
+              {{ "pages.importLivingCookbook.includeTechniques" | translate }}
+            </ion-checkbox>
+          }
+          @if (!showFileTypeWarning()) {
+            <ion-button slot="start" (click)="submit()">
+              {{ "pages.import.upload" | translate }}
+            </ion-button>
+          }
+          @if (showFileTypeWarning()) {
+            <ion-button slot="start" (click)="submit()">
+              {{ "pages.import.upload.ignoreWarning" | translate }}
+            </ion-button>
           }
         </div>
       </ion-label>
@@ -115,30 +129,31 @@
 
     <ion-item lines="none" [disabled]="progress === undefined">
       <ion-label slot="start">
-        {{ 'pages.import.step' | translate:{ number: 3 } }} @if (progress ===
-        undefined) {
-        <div class="ion-padding">
-          {{ 'pages.import.uploading.hint' | translate }}<br />
-          <ion-progress-bar type="determinate" [value]="0"></ion-progress-bar>
-        </div>
-        } @if (progress !== undefined) {
-        <div class="ion-padding">
-          {{ 'pages.import.uploading' | translate }}<br />
-          <ion-progress-bar
-            type="determinate"
-            [value]="progress"
-          ></ion-progress-bar>
-        </div>
+        {{ "pages.import.step" | translate: { number: 3 } }}
+        @if (progress === undefined) {
+          <div class="ion-padding">
+            {{ "pages.import.uploading.hint" | translate }}<br />
+            <ion-progress-bar type="determinate" [value]="0"></ion-progress-bar>
+          </div>
+        }
+        @if (progress !== undefined) {
+          <div class="ion-padding">
+            {{ "pages.import.uploading" | translate }}<br />
+            <ion-progress-bar
+              type="determinate"
+              [value]="progress"
+            ></ion-progress-bar>
+          </div>
         }
       </ion-label>
     </ion-item>
 
     <ion-item lines="none" [disabled]="true">
       <ion-label slot="start">
-        {{ 'pages.import.step' | translate:{ number: 4 } }}
+        {{ "pages.import.step" | translate: { number: 4 } }}
 
         <div class="ion-padding">
-          {{ 'pages.import.processing' | translate }}<br />
+          {{ "pages.import.processing" | translate }}<br />
           <ion-progress-bar type="determinate" [value]="0"></ion-progress-bar>
         </div>
       </ion-label>
