--- a/packages/frontend/src/app/pages/shopping-list-components/shopping-list-popover/shopping-list-popover.page.html
+++ b/packages/frontend/src/app/pages/shopping-list-components/shopping-list-popover/shopping-list-popover.page.html
@@ -1,24 +1,24 @@
 <ion-list no-border>
   <ion-list-header>
-    {{ 'pages.shoppingListPopover.options.title' | translate }}
+    {{ "pages.shoppingListPopover.options.title" | translate }}
   </ion-list-header>
 
   <ion-item lines="full">
     <ion-select
       label="{{ 'pages.shoppingListPopover.sortBy' | translate }}"
       [(ngModel)]="preferences[preferenceKeys.SortBy]"
-      (ngModelChange)="savePreferences();"
+      (ngModelChange)="savePreferences()"
       okText="{{ 'generic.ok' | translate }}"
       cancelText="{{ 'generic.cancel' | translate }}"
     >
       <ion-select-option value="-title">
-        {{ 'pages.shoppingListPopover.sortBy.title' | translate }}
+        {{ "pages.shoppingListPopover.sortBy.title" | translate }}
       </ion-select-option>
       <ion-select-option value="-createdAt">
-        {{ 'pages.shoppingListPopover.sortBy.createdDesc' | translate }}
+        {{ "pages.shoppingListPopover.sortBy.createdDesc" | translate }}
       </ion-select-option>
       <ion-select-option value="createdAt">
-        {{ 'pages.shoppingListPopover.sortBy.createdAsc' | translate }}
+        {{ "pages.shoppingListPopover.sortBy.createdAsc" | translate }}
       </ion-select-option>
     </ion-select>
   </ion-item>
@@ -29,7 +29,7 @@
       (ngModelChange)="savePreferences()"
     >
       <div class="ion-text-wrap">
-        {{ 'pages.shoppingListPopover.groupCategories' | translate }}
+        {{ "pages.shoppingListPopover.groupCategories" | translate }}
       </div>
     </ion-toggle>
   </ion-item>
@@ -40,7 +40,7 @@
       (ngModelChange)="savePreferences()"
     >
       <div class="ion-text-wrap">
-        {{ 'pages.shoppingListPopover.groupSimilar' | translate }}
+        {{ "pages.shoppingListPopover.groupSimilar" | translate }}
       </div>
     </ion-toggle>
   </ion-item>
@@ -51,22 +51,22 @@
       (ngModelChange)="savePreferences()"
     >
       <div class="ion-text-wrap">
-        {{ 'pages.shoppingListPopover.showTitle' | translate }}
+        {{ "pages.shoppingListPopover.showTitle" | translate }}
       </div>
     </ion-toggle>
   </ion-item>
 
   @if (shoppingList.collaboratorUsers.length > 0) {
-  <ion-item lines="full">
-    <ion-toggle
-      [(ngModel)]="preferences[preferenceKeys.ShowAddedBy]"
-      (ngModelChange)="savePreferences()"
-    >
-      <div class="ion-text-wrap">
-        {{ 'pages.shoppingListPopover.showAddedBy' | translate }}
-      </div>
-    </ion-toggle>
-  </ion-item>
+    <ion-item lines="full">
+      <ion-toggle
+        [(ngModel)]="preferences[preferenceKeys.ShowAddedBy]"
+        (ngModelChange)="savePreferences()"
+      >
+        <div class="ion-text-wrap">
+          {{ "pages.shoppingListPopover.showAddedBy" | translate }}
+        </div>
+      </ion-toggle>
+    </ion-item>
   }
 
   <ion-item lines="full">
@@ -75,7 +75,7 @@
       (ngModelChange)="savePreferences()"
     >
       <div class="ion-text-wrap">
-        {{ 'pages.shoppingListPopover.showAddedOn' | translate }}
+        {{ "pages.shoppingListPopover.showAddedOn" | translate }}
       </div>
     </ion-toggle>
   </ion-item>
@@ -86,18 +86,18 @@
       (ngModelChange)="savePreferences()"
     >
       <div class="ion-text-wrap">
-        {{ 'pages.shoppingListPopover.preferDelete' | translate }}
+        {{ "pages.shoppingListPopover.preferDelete" | translate }}
       </div>
     </ion-toggle>
   </ion-item>
 
   <ion-list-header>
-    {{ 'pages.shoppingListPopover.actions.title' | translate }}
+    {{ "pages.shoppingListPopover.actions.title" | translate }}
   </ion-list-header>
 
   <ion-button (click)="print()" expand="block" size="small" class="ion-margin">
     <ion-icon name="print" slot="start"></ion-icon>
-    {{ 'pages.shoppingListPopover.print' | translate }}
+    {{ "pages.shoppingListPopover.print" | translate }}
   </ion-button>
 
   <ion-button
@@ -107,7 +107,7 @@
     class="ion-margin"
   >
     <ion-icon name="pencil" slot="start"></ion-icon>
-    {{ 'pages.shoppingListPopover.update' | translate }}
+    {{ "pages.shoppingListPopover.update" | translate }}
   </ion-button>
 
   <ion-button
@@ -117,11 +117,11 @@
     class="ion-margin"
   >
     <ion-icon name="reorder-three" slot="start"></ion-icon>
-    {{ 'pages.shoppingListPopover.categoryOrder' | translate }}
+    {{ "pages.shoppingListPopover.categoryOrder" | translate }}
   </ion-button>
 
   <ion-list-header>
-    {{ 'pages.shoppingListPopover.dangerZone.title' | translate }}
+    {{ "pages.shoppingListPopover.dangerZone.title" | translate }}
   </ion-list-header>
 
   <ion-button
@@ -132,7 +132,7 @@
     class="ion-margin"
   >
     <ion-icon name="remove-circle" slot="start"></ion-icon>
-    {{ 'pages.shoppingListPopover.removeAll' | translate }}
+    {{ "pages.shoppingListPopover.removeAll" | translate }}
   </ion-button>
 
   <ion-button
@@ -143,6 +143,6 @@
     class="ion-margin"
   >
     <ion-icon name="trash" slot="start"></ion-icon>
-    {{ 'pages.shoppingListPopover.delete' | translate }}
+    {{ "pages.shoppingListPopover.delete" | translate }}
   </ion-button>
 </ion-list>
