--- a/packages/frontend/src/app/pages/shopping-list-components/shopping-lists/shopping-lists.page.html
+++ b/packages/frontend/src/app/pages/shopping-list-components/shopping-lists/shopping-lists.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
 
-    <ion-title> {{ 'pages.shoppingLists.title' | translate }} </ion-title>
+    <ion-title> {{ "pages.shoppingLists.title" | translate }} </ion-title>
 
     <ion-buttons slot="end">
       <ion-button id="popover-trigger">
@@ -21,7 +21,7 @@
   <ion-popover trigger="popover-trigger" triggerAction="click">
     <ng-template>
       <ion-content class="ion-padding">
-        <ion-list-header> {{ 'generic.options' | translate }} </ion-list-header>
+        <ion-list-header> {{ "generic.options" | translate }} </ion-list-header>
 
         <ion-button
           (click)="showIgnoreModal()"
@@ -30,7 +30,7 @@
           class="ion-margin"
         >
           <ion-icon name="ban" slot="start"></ion-icon>
-          {{ 'pages.shoppingLists.editIgnore' | translate }}
+          {{ "pages.shoppingLists.editIgnore" | translate }}
         </ion-button>
       </ion-content>
     </ng-template>
@@ -38,61 +38,72 @@
 
   <ion-list>
     @for (shoppingList of shoppingLists; track shoppingList) {
-    <ion-item
-      button
-      class="ion-text-wrap"
-      (click)="openShoppingList(shoppingList.id)"
-    >
-      <ion-icon name="list" slot="start"></ion-icon>
-      <ion-label>
-        <h2>{{ shoppingList.title }}</h2>
-        <p>
-          {{ 'pages.shoppingLists.created' |
-          translate:{date:formatItemCreationDate(shoppingList.createdAt)} }}
-        </p>
-        @if (shoppingList.collaboratorUsers.length > 0) {
-        <p>
-          {{ 'pages.shoppingLists.collaboration' | translate }} @for
-          (collaboratorUser of shoppingList.collaboratorUsers; track
-          collaboratorUser; let isLast = $last) {
-          <span>
-            @if (me?.id !== collaboratorUser.user.id) {
-            <span>
-              {{ collaboratorUser.user.name }}@if (!isLast || me?.id !==
-              shoppingList.userId) {
-              <span>,</span>
+      <ion-item
+        button
+        class="ion-text-wrap"
+        (click)="openShoppingList(shoppingList.id)"
+      >
+        <ion-icon name="list" slot="start"></ion-icon>
+        <ion-label>
+          <h2>{{ shoppingList.title }}</h2>
+          <p>
+            {{
+              "pages.shoppingLists.created"
+                | translate
+                  : { date: formatItemCreationDate(shoppingList.createdAt) }
+            }}
+          </p>
+          @if (shoppingList.collaboratorUsers.length > 0) {
+            <p>
+              {{ "pages.shoppingLists.collaboration" | translate }}
+              @for (
+                collaboratorUser of shoppingList.collaboratorUsers;
+                track collaboratorUser;
+                let isLast = $last
+              ) {
+                <span>
+                  @if (me?.id !== collaboratorUser.user.id) {
+                    <span>
+                      {{ collaboratorUser.user.name }}
+                      @if (!isLast || me?.id !== shoppingList.userId) {
+                        <span>,</span>
+                      }
+                    </span>
+                  }
+                </span>
               }
-            </span>
+              @if (me?.id !== shoppingList.userId) {
+                <span> {{ shoppingList.user.name }} </span>
+              }
+            </p>
+          }
+          <p>
+            @if (me?.id !== shoppingList.userId) {
+              <span>
+                {{
+                  "pages.shoppingLists.createdBy"
+                    | translate: { name: shoppingList.user.name }
+                }}
+              </span>
             }
-          </span>
-          } @if (me?.id !== shoppingList.userId) {
-          <span> {{ shoppingList.user.name }} </span>
-          }
-        </p>
-        }
-        <p>
-          @if (me?.id !== shoppingList.userId) {
-          <span>
-            {{ 'pages.shoppingLists.createdBy' |
-            translate:{name:shoppingList.user.name} }}
-          </span>
-          } @if (me?.id === shoppingList.userId) {
-          <span> {{ 'pages.shoppingLists.owner' | translate }} </span>
-          }
-        </p>
-      </ion-label>
-      <ion-badge slot="end">{{ shoppingList._count.items }}</ion-badge>
-    </ion-item>
-    } @if (shoppingLists?.length === 0) {
-    <null-state>
-      <ion-icon name="cart" class="big-icon" virtualSlot="header"></ion-icon>
-      <ion-label virtualSlot="body">
-        <p>
-          {{ 'pages.shoppingLists.nullState.1' | translate }}<br />
-          {{ 'pages.shoppingLists.nullState.2' | translate }}
-        </p>
-      </ion-label>
-    </null-state>
+            @if (me?.id === shoppingList.userId) {
+              <span> {{ "pages.shoppingLists.owner" | translate }} </span>
+            }
+          </p>
+        </ion-label>
+        <ion-badge slot="end">{{ shoppingList._count.items }}</ion-badge>
+      </ion-item>
+    }
+    @if (shoppingLists?.length === 0) {
+      <null-state>
+        <ion-icon name="cart" class="big-icon" virtualSlot="header"></ion-icon>
+        <ion-label virtualSlot="body">
+          <p>
+            {{ "pages.shoppingLists.nullState.1" | translate }}<br />
+            {{ "pages.shoppingLists.nullState.2" | translate }}
+          </p>
+        </ion-label>
+      </null-state>
     }
   </ion-list>
 
