--- a/packages/frontend/src/app/pages/auth/auth.page.html
+++ b/packages/frontend/src/app/pages/auth/auth.page.html
@@ -1,19 +1,22 @@
 <ion-header>
   <ion-toolbar color="nav">
     @if (isInModal) {
-    <ion-buttons slot="start">
-      <ion-button (click)="logout()">
-        <ion-icon slot="icon-only" name="close"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    } @if (!isInModal) {
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    } @if (showLogin) {
-    <ion-title>{{ 'pages.auth.title.login' | translate }}</ion-title>
-    } @if (!showLogin) {
-    <ion-title>{{ 'pages.auth.title.register' | translate }}</ion-title>
+      <ion-buttons slot="start">
+        <ion-button (click)="logout()">
+          <ion-icon slot="icon-only" name="close"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    }
+    @if (!isInModal) {
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    }
+    @if (showLogin) {
+      <ion-title>{{ "pages.auth.title.login" | translate }}</ion-title>
+    }
+    @if (!showLogin) {
+      <ion-title>{{ "pages.auth.title.register" | translate }}</ion-title>
     }
   </ion-toolbar>
 </ion-header>
@@ -25,37 +28,40 @@
         <br />
 
         @if (isSelfHost) {
-        <div>{{ 'pages.auth.selfhostWarning' | translate }}</div>
-        } @if (!isSelfHost) {
-        <logo-icon [noBg]="true"></logo-icon>
-        } @if (showLogin) {
-        <div class="welcome">
-          <h2>{{ 'pages.auth.welcome.login' | translate }}</h2>
-          <span>{{ 'pages.auth.welcome.login.sub' | translate }}</span>
-        </div>
-        } @if (!showLogin) {
-        <div class="welcome">
-          <h2>{{ 'pages.auth.welcome.register' | translate }}</h2>
-          <span>{{ 'pages.auth.welcome.register.sub1' | translate }}</span
-          ><br />
-          <span>{{ 'pages.auth.welcome.register.sub2' | translate }}</span>
-        </div>
+          <div>{{ "pages.auth.selfhostWarning" | translate }}</div>
+        }
+        @if (!isSelfHost) {
+          <logo-icon [noBg]="true"></logo-icon>
+        }
+        @if (showLogin) {
+          <div class="welcome">
+            <h2>{{ "pages.auth.welcome.login" | translate }}</h2>
+            <span>{{ "pages.auth.welcome.login.sub" | translate }}</span>
+          </div>
+        }
+        @if (!showLogin) {
+          <div class="welcome">
+            <h2>{{ "pages.auth.welcome.register" | translate }}</h2>
+            <span>{{ "pages.auth.welcome.register.sub1" | translate }}</span
+            ><br />
+            <span>{{ "pages.auth.welcome.register.sub2" | translate }}</span>
+          </div>
         }
 
         <br /><br /><br /><br />
 
         @if (!showLogin) {
-        <div>
-          <ion-item>
-            <ion-input
-              label="{{ 'pages.auth.input.name' | translate }}"
-              labelPlacement="stacked"
-              [(ngModel)]="name"
-              type="text"
-            ></ion-input>
-          </ion-item>
-          <br />
-        </div>
+          <div>
+            <ion-item>
+              <ion-input
+                label="{{ 'pages.auth.input.name' | translate }}"
+                labelPlacement="stacked"
+                [(ngModel)]="name"
+                type="text"
+              ></ion-input>
+            </ion-item>
+            <br />
+          </div>
         }
 
         <ion-item>
@@ -94,82 +100,86 @@
         <br />
 
         @if (!showLogin) {
-        <div>
-          <ion-item>
-            <ion-input
-              label="{{ 'pages.auth.input.confirmPassword' | translate }}"
-              labelPlacement="stacked"
-              [(ngModel)]="confirmPassword"
-              [type]="revealPassword ? 'text' : 'password'"
-              (keyup.enter)="auth()"
-            >
-              <ion-button
-                fill="clear"
-                slot="end"
-                aria-label="Show/hide password"
-                (click)="revealPassword = !revealPassword"
+          <div>
+            <ion-item>
+              <ion-input
+                label="{{ 'pages.auth.input.confirmPassword' | translate }}"
+                labelPlacement="stacked"
+                [(ngModel)]="confirmPassword"
+                [type]="revealPassword ? 'text' : 'password'"
+                (keyup.enter)="auth()"
               >
-                <ion-icon
-                  slot="icon-only"
-                  [name]="revealPassword ? 'eye-off' : 'eye'"
-                  aria-hidden="true"
-                  color="medium"
-                  size="small"
-                ></ion-icon>
-              </ion-button>
-            </ion-input>
-          </ion-item>
-          <br /><br />
-        </div>
+                <ion-button
+                  fill="clear"
+                  slot="end"
+                  aria-label="Show/hide password"
+                  (click)="revealPassword = !revealPassword"
+                >
+                  <ion-icon
+                    slot="icon-only"
+                    [name]="revealPassword ? 'eye-off' : 'eye'"
+                    aria-hidden="true"
+                    color="medium"
+                    size="small"
+                  ></ion-icon>
+                </ion-button>
+              </ion-input>
+            </ion-item>
+            <br /><br />
+          </div>
         }
       </div>
 
       @if (!isSelfHost) {
-      <tos-clickwrap-agreement></tos-clickwrap-agreement>
-      } @if (isSelfHost) {
-      <div>{{ 'pages.auth.selfhostWarning2' | translate }}</div>
+        <tos-clickwrap-agreement></tos-clickwrap-agreement>
+      }
+      @if (isSelfHost) {
+        <div>{{ "pages.auth.selfhostWarning2" | translate }}</div>
       }
 
       <div class="ion-padding">
         @if (showLogin) {
-        <ion-button expand="block" (click)="auth()"
-          >{{ 'pages.auth.button.login' | translate }}</ion-button
-        >
-        } @if (!showLogin) {
-        <ion-button expand="block" (click)="auth()"
-          >{{ 'pages.auth.button.register' | translate }}</ion-button
-        >
+          <ion-button expand="block" (click)="auth()">{{
+            "pages.auth.button.login" | translate
+          }}</ion-button>
+        }
+        @if (!showLogin) {
+          <ion-button expand="block" (click)="auth()">{{
+            "pages.auth.button.register" | translate
+          }}</ion-button>
         }
       </div>
 
       @if (!isSelfHost) {
-      <div class="divider">
-        <div class="divider-segment"></div>
-        <p class="ion-text-center">{{ 'pages.auth.or' | translate }}</p>
-        <div class="divider-segment"></div>
-      </div>
-      } @if (!isSelfHost) {
-      <div class="ion-padding-start ion-padding-end ion-padding-bottom">
-        <sign-in-with-google
-          (signInComplete)="signInWithGoogleComplete($event)"
-        ></sign-in-with-google>
-      </div>
+        <div class="divider">
+          <div class="divider-segment"></div>
+          <p class="ion-text-center">{{ "pages.auth.or" | translate }}</p>
+          <div class="divider-segment"></div>
+        </div>
+      }
+      @if (!isSelfHost) {
+        <div class="ion-padding-start ion-padding-end ion-padding-bottom">
+          <sign-in-with-google
+            (signInComplete)="signInWithGoogleComplete($event)"
+          ></sign-in-with-google>
+        </div>
       }
 
       <div>
         @if (showLogin) {
-        <ion-button fill="clear" expand="block" (click)="forgotPassword()"
-          >{{ 'pages.auth.button.forgotPassword' | translate }}</ion-button
-        >
+          <ion-button fill="clear" expand="block" (click)="forgotPassword()">{{
+            "pages.auth.button.forgotPassword" | translate
+          }}</ion-button>
         }
       </div>
 
       <div>
         <ion-button fill="clear" expand="block" (click)="toggleLogin()">
           @if (showLogin) {
-          <span>{{ 'pages.auth.button.registerInstead' | translate }}</span>
-          } @if (!showLogin) {
-          <span>{{ 'pages.auth.button.loginInstead' | translate }}</span>
+            <span>{{ "pages.auth.button.registerInstead" | translate }}</span>
+          }
+          @if (!showLogin) {
+            <span>{{ "pages.auth.button.loginInstead" | translate }}</span>
           }
         </ion-button>
       </div>
