--- a/packages/frontend/src/app/pages/info-components/welcome/welcome.page.html
+++ b/packages/frontend/src/app/pages/info-components/welcome/welcome.page.html
@@ -5,14 +5,15 @@
     </ion-buttons>
     <ion-title>
       @if (isSelfHost) {
-      <span>RecipeSage Self Hosted</span>
-      } @if (!isSelfHost) {
-      <img
-        src="assets/recipesage-white-trimmed.png"
-        alt="RecipeSage Logo"
-        style="display: inline-block"
-        height="40px"
-      />
+        <span>RecipeSage Self Hosted</span>
+      }
+      @if (!isSelfHost) {
+        <img
+          src="assets/recipesage-white-trimmed.png"
+          alt="RecipeSage Logo"
+          style="display: inline-block"
+          height="40px"
+        />
       }
       <!--RecipeSage-->
     </ion-title>
@@ -27,13 +28,18 @@
 
     <div class="title">
       @if (isSelfHost) {
-      <h1>{{ 'pages.welcome.selfhostTitle' | translate }}</h1>
-      } @if (!isSelfHost) {
-      <h1>{{ 'pages.welcome.title' | translate }}</h1>
-      } @if (isSelfHost) {
-      <p class="subtitle">{{ 'pages.welcome.selfhostSubtitle' | translate }}</p>
-      } @if (!isSelfHost) {
-      <p class="subtitle">{{ 'pages.welcome.subtitle' | translate }}</p>
+        <h1>{{ "pages.welcome.selfhostTitle" | translate }}</h1>
+      }
+      @if (!isSelfHost) {
+        <h1>{{ "pages.welcome.title" | translate }}</h1>
+      }
+      @if (isSelfHost) {
+        <p class="subtitle">
+          {{ "pages.welcome.selfhostSubtitle" | translate }}
+        </p>
+      }
+      @if (!isSelfHost) {
+        <p class="subtitle">{{ "pages.welcome.subtitle" | translate }}</p>
       }
 
       <br />
@@ -41,7 +47,7 @@
       <ion-button (click)="goToAuth('register')" style="margin: 0">
         <ion-icon name="leaf" slot="start"></ion-icon>
         <ion-label>
-          {{ 'pages.welcome.registerButton' | translate }}
+          {{ "pages.welcome.registerButton" | translate }}
         </ion-label>
       </ion-button>
 
@@ -50,7 +56,7 @@
 
       <ion-button (click)="goToAuth('login')" size="small">
         <ion-icon src="assets/icon/carrot.svg" slot="start"></ion-icon>
-        <ion-label> {{ 'pages.welcome.loginButton' | translate }} </ion-label>
+        <ion-label> {{ "pages.welcome.loginButton" | translate }} </ion-label>
       </ion-button>
     </div>
 
@@ -61,77 +67,84 @@
         loop
         preload="none"
         muted
-        poster="https://static.recipesage.com/assets/{{ isIOS ? 'ios' : 'android' }}-autoimport-demo.png"
+        poster="https://static.recipesage.com/assets/{{
+          isIOS ? 'ios' : 'android'
+        }}-autoimport-demo.png"
       >
         <source
-          src="https://static.recipesage.com/assets/{{ isIOS ? 'ios' : 'android' }}-autoimport-demo.mp4"
+          src="https://static.recipesage.com/assets/{{
+            isIOS ? 'ios' : 'android'
+          }}-autoimport-demo.mp4"
           type="video/mp4"
         />
       </video>
     </div>
 
     <div class="ion-padding welcomeContent">
-      <span class="sectionHeader"
-        >{{ 'pages.welcome.description.welcome' | translate }}</span
+      <span class="sectionHeader">{{
+        "pages.welcome.description.welcome" | translate
+      }}</span
       ><br />
 
       <br />
 
-      {{ 'pages.welcome.description.1' | translate }}<br /><br />
+      {{ "pages.welcome.description.1" | translate }}<br /><br />
 
-      {{ 'pages.welcome.description.2' | translate }}
+      {{ "pages.welcome.description.2" | translate }}
 
       <br /><br /><br />
 
-      <span class="sectionHeader"
-        >{{ 'pages.welcome.description.features' | translate }}</span
+      <span class="sectionHeader">{{
+        "pages.welcome.description.features" | translate
+      }}</span
       ><br />
 
       <ul>
         <li>
-          <b>{{ 'pages.welcome.description.features.1.title' | translate }}</b>
-          {{ 'pages.welcome.description.features.1.description' | translate }}
+          <b>{{ "pages.welcome.description.features.1.title" | translate }}</b>
+          {{ "pages.welcome.description.features.1.description" | translate }}
         </li>
         <li>
-          <b>{{ 'pages.welcome.description.features.2.title' | translate }}</b>
-          {{ 'pages.welcome.description.features.2.description' | translate }}
+          <b>{{ "pages.welcome.description.features.2.title" | translate }}</b>
+          {{ "pages.welcome.description.features.2.description" | translate }}
         </li>
         <li>
-          <b>{{ 'pages.welcome.description.features.3.title' | translate }}</b>
-          {{ 'pages.welcome.description.features.3.description' | translate }}
+          <b>{{ "pages.welcome.description.features.3.title" | translate }}</b>
+          {{ "pages.welcome.description.features.3.description" | translate }}
         </li>
         <li>
-          <b>{{ 'pages.welcome.description.features.4.title' | translate }}</b>
-          {{ 'pages.welcome.description.features.4.description' | translate }}
+          <b>{{ "pages.welcome.description.features.4.title" | translate }}</b>
+          {{ "pages.welcome.description.features.4.description" | translate }}
         </li>
         <li>
-          <b>{{ 'pages.welcome.description.features.5.title' | translate }}</b>
-          {{ 'pages.welcome.description.features.5.description' | translate }}
+          <b>{{ "pages.welcome.description.features.5.title" | translate }}</b>
+          {{ "pages.welcome.description.features.5.description" | translate }}
         </li>
         <li>
-          <b>{{ 'pages.welcome.description.features.6.title' | translate }}</b>
-          {{ 'pages.welcome.description.features.6.description' | translate }}
+          <b>{{ "pages.welcome.description.features.6.title" | translate }}</b>
+          {{ "pages.welcome.description.features.6.description" | translate }}
         </li>
         <li>
-          <b>{{ 'pages.welcome.description.features.7.title' | translate }}</b>
-          {{ 'pages.welcome.description.features.7.description' | translate }}
+          <b>{{ "pages.welcome.description.features.7.title" | translate }}</b>
+          {{ "pages.welcome.description.features.7.description" | translate }}
         </li>
         <li>
-          <b>{{ 'pages.welcome.description.features.8.title' | translate }}</b>
-          {{ 'pages.welcome.description.features.8.description' | translate }}
+          <b>{{ "pages.welcome.description.features.8.title" | translate }}</b>
+          {{ "pages.welcome.description.features.8.description" | translate }}
         </li>
       </ul>
 
-      <span class="sectionHeader"
-        >{{ 'pages.welcome.description.cta' | translate }}</span
+      <span class="sectionHeader">{{
+        "pages.welcome.description.cta" | translate
+      }}</span
       ><br />
 
       <ul>
-        <li>{{ 'pages.welcome.description.cta.1' | translate }}</li>
-        <li>{{ 'pages.welcome.description.cta.2' | translate }}</li>
-        <li>{{ 'pages.welcome.description.cta.3' | translate }}</li>
-        <li>{{ 'pages.welcome.description.cta.4' | translate }}</li>
-        <li>{{ 'pages.welcome.description.cta.5' | translate }}</li>
+        <li>{{ "pages.welcome.description.cta.1" | translate }}</li>
+        <li>{{ "pages.welcome.description.cta.2" | translate }}</li>
+        <li>{{ "pages.welcome.description.cta.3" | translate }}</li>
+        <li>{{ "pages.welcome.description.cta.4" | translate }}</li>
+        <li>{{ "pages.welcome.description.cta.5" | translate }}</li>
       </ul>
 
       <br /><br />
@@ -140,7 +153,7 @@
         <ion-button (click)="goToAuth('register')" style="margin: 0">
           <ion-icon name="leaf" slot="start"></ion-icon>
           <ion-label>
-            {{ 'pages.welcome.registerButton' | translate }}
+            {{ "pages.welcome.registerButton" | translate }}
           </ion-label>
         </ion-button>
 
@@ -148,7 +161,7 @@
 
         <ion-button (click)="goToAuth('login')" size="small">
           <ion-icon src="assets/icon/carrot.svg" slot="start"></ion-icon>
-          <ion-label> {{ 'pages.welcome.loginButton' | translate }} </ion-label>
+          <ion-label> {{ "pages.welcome.loginButton" | translate }} </ion-label>
         </ion-button>
       </div>
 
