--- a/packages/frontend/src/app/pages/labels-pages/new-label-item-modal/new-label-item-modal.page.html
+++ b/packages/frontend/src/app/pages/labels-pages/new-label-item-modal/new-label-item-modal.page.html
@@ -1,21 +1,24 @@
 <ion-header>
   <ion-toolbar color="nav">
     @if (type) {
-    <ion-buttons slot="start">
-      <ion-button (click)="type = null">
-        <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    } @if (!type) {
-    <ion-title> {{ 'pages.newLabelItemModal.title' | translate }} </ion-title>
-    } @if (type === 'group') {
-    <ion-title>
-      {{ 'pages.newLabelItemModal.categoryTitle' | translate }}
-    </ion-title>
-    } @if (type === 'label') {
-    <ion-title>
-      {{ 'pages.newLabelItemModal.labelTitle' | translate }}
-    </ion-title>
+      <ion-buttons slot="start">
+        <ion-button (click)="type = null">
+          <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    }
+    @if (!type) {
+      <ion-title> {{ "pages.newLabelItemModal.title" | translate }} </ion-title>
+    }
+    @if (type === "group") {
+      <ion-title>
+        {{ "pages.newLabelItemModal.categoryTitle" | translate }}
+      </ion-title>
+    }
+    @if (type === "label") {
+      <ion-title>
+        {{ "pages.newLabelItemModal.labelTitle" | translate }}
+      </ion-title>
     }
 
     <ion-buttons slot="end">
@@ -27,85 +30,105 @@
 </ion-header>
 
 @if (!type) {
-<ion-content class="ion-padding">
-  <ion-item button (click)="type = 'label'">
-    <ion-icon name="pricetag" slot="start"></ion-icon>
-    <ion-label>
-      {{ 'pages.newLabelItemModal.label' | translate }}
-      <p class="ion-text-wrap">
-        {{ 'pages.newLabelItemModal.labelDescription' | translate }}
-      </p>
-    </ion-label>
-  </ion-item>
-  <ion-item button (click)="type = 'group'">
-    <ion-icon name="pricetags" slot="start"></ion-icon>
-    <ion-label>
-      {{ 'pages.newLabelItemModal.group' | translate }}
-      <p class="ion-text-wrap">
-        {{ 'pages.newLabelItemModal.groupDescription' | translate }}
-      </p>
-    </ion-label>
-  </ion-item>
-</ion-content>
-} @if (type === 'label') {
-<ion-content class="ion-padding">
-  <br />
-  <ion-item lines="none">
-    <ion-input
-      labelPlacement="stacked"
-      label="{{ 'pages.newLabelItemModal.labelTitleInput' | translate }}"
-      placeholder="{{ 'pages.newLabelItemModal.labelTitleInputPlaceholder' | translate }}"
-      helperText="{{ 'pages.newLabelItemModal.labelTitleInputHint' | translate }}"
-      (ionInput)="title = $event.detail.value || ''"
-      [value]="title"
-    ></ion-input>
-  </ion-item>
-</ion-content>
-} @if (type === 'group') {
-<ion-content class="ion-padding">
-  <br />
-  <ion-item lines="none">
-    <ion-input
-      labelPlacement="stacked"
-      label="{{ 'pages.manageLabelGroupModal.groupTitle' | translate }}"
-      placeholder="{{ 'pages.manageLabelGroupModal.groupTitlePlaceholder' | translate }}"
-      helperText="{{ 'pages.manageLabelGroupModal.groupTitleHint' | translate }}"
-      (ionInput)="title = $event.detail.value || ''"
-      [value]="title"
-    ></ion-input>
-  </ion-item>
-  <br />
-  <br />
-  <ion-item lines="none">
-    <ion-toggle [checked]="warnWhenNotPresent" (ionChange)="warnToggle($event)">
-      {{ 'pages.manageLabelGroupModal.warn' | translate }}
+  <ion-content class="ion-padding">
+    <ion-item button (click)="type = 'label'">
+      <ion-icon name="pricetag" slot="start"></ion-icon>
       <ion-label>
+        {{ "pages.newLabelItemModal.label" | translate }}
         <p class="ion-text-wrap">
-          {{ 'pages.manageLabelGroupModal.warnDescription' | translate }}
+          {{ "pages.newLabelItemModal.labelDescription" | translate }}
         </p>
       </ion-label>
-    </ion-toggle>
-  </ion-item>
-  <ion-item lines="none">
-    <ion-label>
-      {{ 'pages.manageLabelGroupModal.labels' | translate }}
-      <p class="ion-text-wrap">
-        {{ 'pages.manageLabelGroupModal.labelsHint' | translate }}
-      </p>
-    </ion-label>
-  </ion-item>
-  <select-multiple-items
-    [items]="mapLabelsToSelectableItems(ungroupedLabels)"
-    (selectedItemsChange)="selectedLabelsChange($event)"
-    noSelectedItemsText="{{ 'pages.manageLabelGroupModal.labels.noSelectedItems' | translate }}"
-    noItemsText="{{ 'pages.manageLabelGroupModal.labels.noItems' | translate }}"
-    searchPlaceholderText="{{ 'pages.manageLabelGroupModal.labels.search' | translate }}"
-  ></select-multiple-items>
-</ion-content>
-} @if (type) {
-<ion-footer class="ion-padding">
-  <ion-button (click)="save()" [disabled]="!title.length" expand="block">
-    {{ 'generic.save' | translate }}
-  </ion-button>
-</ion-footer>
+    </ion-item>
+    <ion-item button (click)="type = 'group'">
+      <ion-icon name="pricetags" slot="start"></ion-icon>
+      <ion-label>
+        {{ "pages.newLabelItemModal.group" | translate }}
+        <p class="ion-text-wrap">
+          {{ "pages.newLabelItemModal.groupDescription" | translate }}
+        </p>
+      </ion-label>
+    </ion-item>
+  </ion-content>
+}
+@if (type === "label") {
+  <ion-content class="ion-padding">
+    <br />
+    <ion-item lines="none">
+      <ion-input
+        labelPlacement="stacked"
+        label="{{ 'pages.newLabelItemModal.labelTitleInput' | translate }}"
+        placeholder="{{
+          'pages.newLabelItemModal.labelTitleInputPlaceholder' | translate
+        }}"
+        helperText="{{
+          'pages.newLabelItemModal.labelTitleInputHint' | translate
+        }}"
+        (ionInput)="title = $event.detail.value || ''"
+        [value]="title"
+      ></ion-input>
+    </ion-item>
+  </ion-content>
+}
+@if (type === "group") {
+  <ion-content class="ion-padding">
+    <br />
+    <ion-item lines="none">
+      <ion-input
+        labelPlacement="stacked"
+        label="{{ 'pages.manageLabelGroupModal.groupTitle' | translate }}"
+        placeholder="{{
+          'pages.manageLabelGroupModal.groupTitlePlaceholder' | translate
+        }}"
+        helperText="{{
+          'pages.manageLabelGroupModal.groupTitleHint' | translate
+        }}"
+        (ionInput)="title = $event.detail.value || ''"
+        [value]="title"
+      ></ion-input>
+    </ion-item>
+    <br />
+    <br />
+    <ion-item lines="none">
+      <ion-toggle
+        [checked]="warnWhenNotPresent"
+        (ionChange)="warnToggle($event)"
+      >
+        {{ "pages.manageLabelGroupModal.warn" | translate }}
+        <ion-label>
+          <p class="ion-text-wrap">
+            {{ "pages.manageLabelGroupModal.warnDescription" | translate }}
+          </p>
+        </ion-label>
+      </ion-toggle>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-label>
+        {{ "pages.manageLabelGroupModal.labels" | translate }}
+        <p class="ion-text-wrap">
+          {{ "pages.manageLabelGroupModal.labelsHint" | translate }}
+        </p>
+      </ion-label>
+    </ion-item>
+    <select-multiple-items
+      [items]="mapLabelsToSelectableItems(ungroupedLabels)"
+      (selectedItemsChange)="selectedLabelsChange($event)"
+      noSelectedItemsText="{{
+        'pages.manageLabelGroupModal.labels.noSelectedItems' | translate
+      }}"
+      noItemsText="{{
+        'pages.manageLabelGroupModal.labels.noItems' | translate
+      }}"
+      searchPlaceholderText="{{
+        'pages.manageLabelGroupModal.labels.search' | translate
+      }}"
+    ></select-multiple-items>
+  </ion-content>
+}
+@if (type) {
+  <ion-footer class="ion-padding">
+    <ion-button (click)="save()" [disabled]="!title.length" expand="block">
+      {{ "generic.save" | translate }}
+    </ion-button>
+  </ion-footer>
 }
