--- a/packages/frontend/src/app/pages/meal-plan-components/update-meal-plan-modal/update-meal-plan-modal.page.html
+++ b/packages/frontend/src/app/pages/meal-plan-components/update-meal-plan-modal/update-meal-plan-modal.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{ 'pages.updateMealPlanModal.title' | translate }}</ion-title>
+    <ion-title>{{ "pages.updateMealPlanModal.title" | translate }}</ion-title>
 
     <ion-buttons slot="end">
       <ion-button (click)="cancel()">
@@ -11,38 +11,39 @@
 </ion-header>
 
 @if (loaded) {
-<ion-content class="ion-padding">
-  <ion-item>
-    <ion-input
-      label="{{ 'pages.updateMealPlanModal.input.title' | translate }}"
-      labelPlacement="stacked"
-      [(ngModel)]="mealPlanTitle"
-      type="text"
-      autocapitalize="on"
-      autocomplete="on"
-      autocorrect="on"
-      spellcheck="true"
-    ></ion-input>
-  </ion-item>
-  <br /><br />
-  <select-collaborators
-    [selectedCollaboratorIds]="selectedCollaboratorIds"
-    (selectedCollaboratorIdsChanged)="selectedCollaboratorIds = $event"
-  ></select-collaborators>
-</ion-content>
+  <ion-content class="ion-padding">
+    <ion-item>
+      <ion-input
+        label="{{ 'pages.updateMealPlanModal.input.title' | translate }}"
+        labelPlacement="stacked"
+        [(ngModel)]="mealPlanTitle"
+        type="text"
+        autocapitalize="on"
+        autocomplete="on"
+        autocorrect="on"
+        spellcheck="true"
+      ></ion-input>
+    </ion-item>
+    <br /><br />
+    <select-collaborators
+      [selectedCollaboratorIds]="selectedCollaboratorIds"
+      (selectedCollaboratorIdsChanged)="selectedCollaboratorIds = $event"
+    ></select-collaborators>
+  </ion-content>
 }
 
 <ion-footer class="ion-padding">
   <ion-button expand="block" (click)="save()" [disabled]="!mealPlanTitle">
     <ion-icon name="list" slot="start"></ion-icon>
     @if (selectedCollaboratorIds.length > 0) {
-    <ion-label>
-      {{ 'pages.updateMealPlanModal.updateAndShare' | translate }}
-    </ion-label>
-    } @if (selectedCollaboratorIds.length === 0) {
-    <ion-label>
-      {{ 'pages.updateMealPlanModal.update' | translate }}
-    </ion-label>
+      <ion-label>
+        {{ "pages.updateMealPlanModal.updateAndShare" | translate }}
+      </ion-label>
+    }
+    @if (selectedCollaboratorIds.length === 0) {
+      <ion-label>
+        {{ "pages.updateMealPlanModal.update" | translate }}
+      </ion-label>
     }
   </ion-button>
 </ion-footer>
