--- a/packages/frontend/src/app/pages/messaging-components/new-message-modal/new-message-modal.page.html
+++ b/packages/frontend/src/app/pages/messaging-components/new-message-modal/new-message-modal.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title> {{ 'pages.newMessageModal.title' | translate }} </ion-title>
+    <ion-title> {{ "pages.newMessageModal.title" | translate }} </ion-title>
 
     <ion-buttons slot="end">
       <ion-button (click)="cancel()">
@@ -16,11 +16,11 @@
     [selectedUser]="recipientInfo"
   ></select-user>
   @if (!recipientId) {
-  <ion-item>
-    <ion-label>
-      <p>{{ 'pages.newMessageModal.input.target' | translate }}</p>
-    </ion-label>
-  </ion-item>
+    <ion-item>
+      <ion-label>
+        <p>{{ "pages.newMessageModal.input.target" | translate }}</p>
+      </ion-label>
+    </ion-item>
   }
 
   <br /><br />
@@ -30,7 +30,9 @@
       [(ngModel)]="message"
       label="{{ 'pages.newMessageModal.compose' | translate }}"
       labelPlacement="stacked"
-      placeholder="{{ 'pages.newMessageModal.input.messagePlaceholder' | translate }}"
+      placeholder="{{
+        'pages.newMessageModal.input.messagePlaceholder' | translate
+      }}"
     ></ion-textarea>
   </ion-item>
 </ion-content>
@@ -38,6 +40,6 @@
 <ion-footer class="ion-padding">
   <ion-button expand="block" (click)="send()" [disabled]="!recipientId">
     <ion-icon name="send" slot="start"></ion-icon>
-    <ion-label> {{ 'pages.newMessageModal.send' | translate }} </ion-label>
+    <ion-label> {{ "pages.newMessageModal.send" | translate }} </ion-label>
   </ion-button>
 </ion-footer>
