--- a/packages/frontend/src/app/pages/settings-components/import-urls/import-urls.page.html
+++ b/packages/frontend/src/app/pages/settings-components/import-urls/import-urls.page.html
@@ -4,14 +4,14 @@
       <ion-back-button [defaultHref]="defaultBackHref"></ion-back-button>
     </ion-buttons>
 
-    <ion-title>{{ 'pages.importUrls.title' | translate }}</ion-title>
+    <ion-title>{{ "pages.importUrls.title" | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <ion-item lines="none">
     <ion-label class="ion-text-wrap">
-      {{ 'pages.importUrls.description' | translate }}
+      {{ "pages.importUrls.description" | translate }}
     </ion-label>
   </ion-item>
 
@@ -32,7 +32,7 @@
   <ion-item lines="none" [disabled]="!urls.trim().length">
     <ion-label>
       <ion-button (click)="submit()">
-        {{ 'generic.submit' | translate }}
+        {{ "generic.submit" | translate }}
       </ion-button>
     </ion-label>
   </ion-item>
