--- a/packages/frontend/src/app/pages/social/share-profile-modal/share-profile-modal.page.html
+++ b/packages/frontend/src/app/pages/social/share-profile-modal/share-profile-modal.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      {{ 'pages.shareProfileModal.title' | translate:{name: profile?.name} }}
+      {{ "pages.shareProfileModal.title" | translate: { name: profile?.name } }}
     </ion-title>
 
     <ion-buttons slot="end">
@@ -14,12 +14,14 @@
 
 <ion-content>
   @if (profileUrl) {
-  <copy-with-webshare
-    [webshareTitle]="profile.name + '\'s RecipeSage profile'"
-    [webshareText]="'Click to view' + this.profile.name + '\'s public RecipeSage profile'"
-    [webshareURL]="profileUrl"
-    [copyText]="profileUrl"
-  ></copy-with-webshare>
+    <copy-with-webshare
+      [webshareTitle]="profile.name + '\'s RecipeSage profile'"
+      [webshareText]="
+        'Click to view' + this.profile.name + '\'s public RecipeSage profile'
+      "
+      [webshareURL]="profileUrl"
+      [copyText]="profileUrl"
+    ></copy-with-webshare>
   }
 
   <div class="share-icon-container">
@@ -41,6 +43,6 @@
 <ion-footer class="ion-padding">
   <ion-button expand="block" (click)="cancel()">
     <ion-icon name="close" slot="start"></ion-icon>
-    <ion-label> {{ 'pages.shareProfileModal.close' | translate }} </ion-label>
+    <ion-label> {{ "pages.shareProfileModal.close" | translate }} </ion-label>
   </ion-button>
 </ion-footer>
