--- a/packages/frontend/src/app/pages/recipe-components/recipe/recipe.page.scss
+++ b/packages/frontend/src/app/pages/recipe-components/recipe/recipe.page.scss
@@ -138,6 +138,15 @@ h2.recipeTitle {
   }
 }
 
+:host
+  ::ng-deep
+  .instructions
+  .instruction
+  .instructionContent
+  .scaledInstructionNumber {
+  font-weight: bold;
+}
+
 .notes {
   .header {
     font-weight: bold;
